kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: sample
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: upload-download-app
    spec:
      containers:
        - name: upload-download-app
          image: rafaelcrc/upload-download-app:v1.0
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      app: upload-download-app
