kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-upload-download-app
  namespace: sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube-example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upload-download-app-service
            port: 
              number: 80
